[package]
name = "wiki_grapher"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
bzip2 = "0.3.3"
lazy_static = "1.4.0"
log = "0.4.8"
petgraph = "0.5.1"
pretty_env_logger = "0.4.0"
regex = "1.3.9"
roxmltree = "0.13.0"
rusqlite = "0.23.1"

[profile.release]
debug = true
