[package]
name = "wiki_grapher"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/wiki_parser"
repository = "https://github.com/celeo/wiki_parser"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "wikipedia"
]
categories = [
  "command-line-utilies"
]

[dependencies]
anyhow = "1.0.33"
bzip2 = "0.4.1"
crossbeam = "0.8.0"
csv = "1.1.3"
lazy_static = "1.4.0"
log = "0.4.11"
petgraph = "0.5.1"
pretty_env_logger = "0.4.0"
regex = "1.4.1"
roxmltree = "0.13.0"

[[bin]]
name = "parser"
path = "src/parser/main.rs"

[[bin]]
name = "grapher"
path = "src/grapher/main.rs"
